--- a/.github/workflows/extract-distributions.yml
+++ b/.github/workflows/extract-distributions.yml
@@ -7,6 +7,14 @@ on:
         description: 'State code (e.g., HI, CA, TX)'
         required: true
         default: 'HI'
+      pums_year:
+        description: 'PUMS data year'
+        required: true
+        default: '2022'
+      bls_year:
+        description: 'BLS data year'
+        required: true
+        default: '2023'
 
 jobs:
   extract:
@@ -14,59 +22,76 @@ jobs:
     
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  # Updated to v4
+        uses: actions/checkout@v4
       
       - name: Set up Python
-        uses: actions/setup-python@v5  # Updated to v5
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
       
       - name: Install dependencies
         run: pip install -r requirements.txt
       
-      # Cache PUMS data
+      # Cache PUMS data (year-specific)
       - name: Cache PUMS data
-        uses: actions/cache@v4  # Updated to v4
+        uses: actions/cache@v4
         with:
           path: cache/pums_cache/
-          key: pums-${{ github.event.inputs.state }}-2022
+          key: pums-${{ github.event.inputs.state }}-${{ github.event.inputs.pums_year }}
       
-      # Cache BLS data (shared across all states)
+      # Cache BLS data (year-specific, shared across all states)
       - name: Cache BLS data
-        uses: actions/cache@v4  # Updated to v4
+        uses: actions/cache@v4
         with:
           path: cache/bls_cache/
-          key: bls-2023
+          key: bls-${{ github.event.inputs.bls_year }}
       
       # Step 1: Extract PUMS distributions
       - name: Extract PUMS distributions
-        run: python scripts/extract_pums_distributions.py --state ${{ github.event.inputs.state }} --year 2022
+        run: |
+          python scripts/extract_pums_distributions.py \
+            --state ${{ github.event.inputs.state }} \
+            --year ${{ github.event.inputs.pums_year }}
       
       # Step 2: Extract BLS distributions
       - name: Extract BLS distributions
-        run: python scripts/extract_bls_distributions.py --state ${{ github.event.inputs.state }} --year 2023
+        run: |
+          python scripts/extract_bls_distributions.py \
+            --state ${{ github.event.inputs.state }} \
+            --year ${{ github.event.inputs.bls_year }}
       
       # Step 3: Extract derived distributions
       - name: Extract derived distributions
         run: |
           python scripts/extract_derived_distributions.py \
             --state ${{ github.event.inputs.state }} \
-            --pums-year 2022 \
-            --bls-year 2023
+            --pums-year ${{ github.event.inputs.pums_year }} \
+            --bls-year ${{ github.event.inputs.bls_year }}
       
       # Validate output files exist
       - name: Validate output
         run: |
           ls -lh output/
-          test -f output/pums_distributions_${{ github.event.inputs.state }}_2022.sql
-          test -f output/bls_occupation_wages_${{ github.event.inputs.state }}_2023.sql
-          test -f output/derived_probabilities_${{ github.event.inputs.state }}_2023.sql
+          test -f output/pums_distributions_${{ github.event.inputs.state }}_${{ github.event.inputs.pums_year }}.sql
+          test -f output/bls_occupation_wages_${{ github.event.inputs.state }}_${{ github.event.inputs.bls_year }}.sql
+          test -f output/derived_probabilities_${{ github.event.inputs.state }}_${{ github.event.inputs.bls_year }}.sql
           echo "✅ All SQL files generated successfully"
+      
+      # Display file information
+      - name: Show generated files
+        run: |
+          echo "📊 Generated files:"
+          du -h output/*.sql
+          echo ""
+          echo "Files ready for download:"
+          echo "  - pums_distributions_${{ github.event.inputs.state }}_${{ github.event.inputs.pums_year }}.sql"
+          echo "  - bls_occupation_wages_${{ github.event.inputs.state }}_${{ github.event.inputs.bls_year }}.sql"
+          echo "  - derived_probabilities_${{ github.event.inputs.state }}_${{ github.event.inputs.bls_year }}.sql"
       
       # Upload SQL files as artifacts
       - name: Upload SQL files
-        uses: actions/upload-artifact@v4  # Updated to v4
+        uses: actions/upload-artifact@v4
         with:
-          name: distributions-${{ github.event.inputs.state }}
+          name: distributions-${{ github.event.inputs.state }}-pums${{ github.event.inputs.pums_year }}-bls${{ github.event.inputs.bls_year }}
           path: output/*.sql
           retention-days: 90
