--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
-pandas>=2.0.0
-numpy>=1.24.0
-requests>=2.31.0
-openpyxl>=3.0.0
+# Tax Training Data Pipeline - Python Dependencies
+# Pin versions for reproducibility
+
+# Core data processing
+pandas==2.1.4
+numpy==1.26.2
+
+# HTTP requests
+requests==2.31.0
+
+# Excel file handling (for BLS OEWS data)
+openpyxl==3.1.2
+
+# Database connectivity (PostgreSQL/Neon)
+psycopg2-binary==2.9.9
+
+# Development dependencies (optional)
+# Uncomment for local testing
+# pytest==7.4.3
+# pytest-cov==4.1.0
+# black==23.12.1
+# flake8==7.0.0
