--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
-# Tax Training Data Pipeline - Python Dependencies
-# Pin versions for reproducibility
+# Existing dependencies
+pandas>=2.0.0
+numpy>=1.24.0
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
+openpyxl>=3.1.0
+requests>=2.31.0
 
-# Core data processing
-pandas==2.1.4
-numpy==1.26.2
+# FastAPI and server
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+python-multipart>=0.0.6
 
-# HTTP requests
-requests==2.31.0
-
-# Excel file handling (for BLS OEWS data)
-openpyxl==3.1.2
-
-# Database connectivity (PostgreSQL/Neon)
-psycopg2-binary==2.9.9
-
-# Development dependencies (optional)
-# Uncomment for local testing
-# pytest==7.4.3
-# pytest-cov==4.1.0
-# black==23.12.1
-# flake8==7.0.0
+# Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+httpx>=0.25.0
+pytest-cov>=4.1.0
